syntax = "proto3";

package nl.toefel.grpc.game;

service TicTacToe {
    rpc TestConnection (TestConnectionRequest) returns (TestConnectionResponse) {
    }
    rpc CreatePlayer (CreatePlayerRequest) returns (Player) {
    }
    rpc ListPlayers (ListPlayersRequest) returns (ListPlayersResponse) {
    }
    rpc PlayGame (stream GameCommand) returns (stream GameEvent) {
    }
}

message TestConnectionRequest {
}
message TestConnectionResponse {
}

message CreatePlayerRequest {
    string name = 1;
}

message Player {
    string id = 1;
    string name = 2;
    int64 join_timestamp = 3;
    int32 wins = 4;
}

message ListPlayersRequest {
}
message ListPlayersResponse {
    repeated Player players = 1;
}

message GameCommand {
    oneof command {
        Identify identify = 1;
        StartGame start_game = 2;
        BoardMove board_move = 4;
    }
}

// command that identifies the player (TODO use metadata or call credentials)
message Identify {
    Player player = 1;
}

// command that invites another player to play a game
message StartGame {
    Player from_player = 2;
    Player to_player = 3;
}

// a board move
message BoardMove {
    string game_id = 1;
    int32 row = 2;
    int32 column = 3;
}

message GameEvent {
    EventType type = 1;
    string game_id = 2;
    Player player_x = 3;
    Player player_o = 4;
    Player next_player = 5;
    Board board = 6;
}

enum EventType {
    START_GAME = 0;
    BOARD_MOVE = 1;
    END_GAME = 2;
}

message Board {
    repeated BoardRow rows = 1;
}

message BoardRow {
    repeated string columns = 1;
}
